--- a/css/vtx.css
+++ b/css/vtx.css
@@ -1,7 +1,7 @@
 /*Estilização padrão Vortex Group*/
 
 /*=Construção=*/
-.vtx-temp {border: 1px solid red;height: 100%;width: 100%;}
+/*.vtx-temp {border: 1px solid red;height: 100%;width: 100%;}
 
 /*Geral Head + Body*/
 body {
